0.2.1
    CSS::Declarations::Box:
    - Remove rendering-specific 'build-box' method
    - Add 'font-length' method
    CSS::Declarations::Units:
    - Add 'em', 'ex' and '%' postfix operators
0.2.0 Add CSS::Declarations::Box, CSS::Declarations::Font
0.1.2 - Add :declarations constructor option. to enable construction from
        CSS declarations AST node.
      - Allow inheritance from objects or style strings
0.1.1 Added `.optimize` method. For direct optimization of ASTs, without
      the need to create intermediate objects
0.1.0 Improved write optmizations
      For example now rewrites style: margin-top: 1pt; margin-right: 2pt;
      as "margin:1pt 2pt"
0.0.4 CSS::Declarations:
     - allow list assignment. E.g.: $css.new: :background-position<top left>;
       shortcut for: $css.new: :background-position("top left");
0.0.3 CSS::Declarations::Units
    - Use 'but' for role application, not global 'does'.
0.0.2
    - Warn, but otherwise ignore illegal assignments:
      $css.azimuth = 'over-yonder'; # has no affect
    - handle default dependencies:
      -- border-color defaults to color
      -- text-align is 'left' or 'right' depending on direction
      (See README.md Properties appendix)
0.0.1 Initial release